# permutation

./: Cargo.toml
benches/: criterion.rs  iai.rs
src/: lib.rs  main.rs
