[package]
name = "permutation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
insta = "1.26.0"
criterion = "0.3"
aoc_sanzen = { package = "lib", git = "https://github.com/mlemesle/aoc", rev = "eaeb14c" }
itertools = "0.10.5"

[[bench]]
name = "permute"
harness = false
